--- a/src/style/sections/_hero.scss
+++ b/src/style/sections/_hero.scss
@@ -17,7 +17,7 @@
 
   
   // background image, hero section
-  background: url("/src/assets/particles3.png");
+  background: url("/src/assets/solaraces.png");
   background-position: center;
   background-size: cover; 
 
