changed favicon and hero background image

--- a/src/style/sections/_hero.scss
+++ b/src/style/sections/_hero.scss
@@ -17,7 +17,8 @@
 
   
   // background image, hero section
-  background: url("/src/assets/solaraces.png");
+  // background: url("./src/assets/particles2.png");
+  background: url("https://drive.google.com/file/d/1G1HqRnU0naMf-CdKfkkUE3lrSq0Y_Xav/view?usp=sharing")
   background-position: center;
   background-size: cover; 
 
