--- a/src/style/sections/_hero.scss
+++ b/src/style/sections/_hero.scss
@@ -17,8 +17,7 @@
 
   
   // background image, hero section
-  // background: url("./src/assets/particles2.png");
-  background: url("/src/assets/particles3.png")
+  background: url("https://drive.google.com/file/d/1G1HqRnU0naMf-CdKfkkUE3lrSq0Y_Xav/view?usp=sharing");
   background-position: center;
   background-size: cover; 
 
