more test, trying to get favicon and hero background right

--- a/src/style/sections/_hero.scss
+++ b/src/style/sections/_hero.scss
@@ -17,7 +17,7 @@
 
   
   // background image, hero section
-  background: url("https://drive.google.com/file/d/1G1HqRnU0naMf-CdKfkkUE3lrSq0Y_Xav/view?usp=sharing");
+  background: url("/src/assets/particles3.png");
   background-position: center;
   background-size: cover; 
 
