--- a/src/style/layout/_footer.scss
+++ b/src/style/layout/_footer.scss
@@ -35,6 +35,9 @@
     border-top: 2px solid rgba(255, 255, 255, 0.1);
   }
 }
+#copyright-for-background-image{
+  font-size: 40%;
+}
 
 .social-links {
   display: flex;
