--- a/src/style/sections/_hero.scss
+++ b/src/style/sections/_hero.scss
@@ -4,7 +4,8 @@
   display: flex;
   align-items: center;
   border-bottom: 0px;
-  background: $white-color;
+  // background: $white-color;
+  background: lightgrey;
   font-weight: 400;
   color: $dark-blue-text;
   padding: 0rem 5.6rem;
@@ -17,7 +18,8 @@
 
   
   // background image, hero section
-  background: url("/src/assets/particles2.png");
+  // background: url("/src/assets/particles2.png");
+  background-image: url("/src/assets/particles2.png"); 
   background-position: center;
   background-size: cover; 
 
