--- a/src/style/sections/_hero.scss
+++ b/src/style/sections/_hero.scss
@@ -5,7 +5,7 @@
   align-items: center;
   border-bottom: 0px;
   // background: $white-color;
-  background: lightgrey;
+  // background: lightgrey;
   font-weight: 400;
   color: $dark-blue-text;
   padding: 0rem 5.6rem;
@@ -18,8 +18,7 @@
 
   
   // background image, hero section
-  // background: url("/src/assets/particles2.png");
-  background-image: url("/src/assets/particles2.png"); 
+  background: url("/src/assets/particles2.png");
   background-position: center;
   background-size: cover; 
 
