--- a/src/style/sections/_hero.scss
+++ b/src/style/sections/_hero.scss
@@ -6,7 +6,7 @@
   border-bottom: 0px;
   // background: $white-color;
   // background: lightgrey;
-  background-image: linear-gradient(to right bottom, rgb(192,192,192) 30%, rgb(232,228,252) 50%, rgb(202,250,188) 20%  );
+  background-image: linear-gradient(to right , rgb(192,192,192) 50%, rgb(232,228,252) 50%, rgb(202,250,188) 50%  );
   font-weight: 400;
   color: $dark-blue-text;
   padding: 0rem 5.6rem;
