--- a/src/style/sections/_hero.scss
+++ b/src/style/sections/_hero.scss
@@ -6,7 +6,8 @@
   border-bottom: 0px;
   // background: $white-color;
   // background: lightgrey;
-  background-image: linear-gradient(to right , rgb(192,192,192) 50%, rgb(232,228,252) 50%, rgb(202,250,188) 50%  );
+  // background-image: linear-gradient(90deg, rgba(111,218));
+  background-image: linear-gradient(90deg, rgba(111,218,104,0.5438550420168067) 17%, rgba(227,233,123,1) 48%, rgba(242,38,65,0.3561799719887955) 100%);
   font-weight: 400;
   color: $dark-blue-text;
   padding: 0rem 5.6rem;
