--- a/src/style/sections/_hero.scss
+++ b/src/style/sections/_hero.scss
@@ -8,7 +8,8 @@
   // background: lightgrey;
   // background-image: linear-gradient(90deg, rgba(111,218));
   // background-image: linear-gradient(90deg, rgba(111,218,104,0.5438550420168067) 17%, rgba(227,233,123,1) 48%, rgba(242,38,65,0.3561799719887955) 100%);
-  background-image: linear-gradient(175deg, rgba(35,222,23,0.13209033613445376) 13%, rgba(213,223,43,0.6334908963585435) 52%, rgba(227,9,38,0.10968137254901966) 79%);
+  // background-image: linear-gradient(175deg, rgba(35,222,23,0.13209033613445376) 13%, rgba(213,223,43,0.6334908963585435) 52%, rgba(227,9,38,0.10968137254901966) 79%);
+  background-image: linear-gradient(175deg, rgba(35,222,23,0.16290266106442575) 13%, rgba(213,223,43,0.6334908963585435) 52%, rgba(15,138,198,0.5410539215686274) 67%, rgba(34,198,15,0.5410539215686274) 91%);
   font-weight: 400;
   color: $dark-blue-text;
   padding: 0rem 5.6rem;
